--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -20,5 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "validator": "^13.11.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
