--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
+    "morgan": "^1.10.0",
     "validator": "^13.11.0"
   }
 }
