--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -3,3 +3,4 @@ DATABASE_PASSWORD = tl7Vt8HYS8aI14Al
 DATABASE_HOST_LINK = mongodb+srv://Agmad-Team:<password>@cluster0.hv1lrot.mongodb.net/OnlineJudge
 SECRET = SecuredData
 EXPIRED = 90d
+COOKIE_EXPIRED = 90
