Forgot & Reset Password has been implemented

--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -1,6 +1,15 @@
 PORT = 5000
+
 DATABASE_PASSWORD = tl7Vt8HYS8aI14Al
 DATABASE_HOST_LINK = mongodb+srv://Agmad-Team:<password>@cluster0.hv1lrot.mongodb.net/OnlineJudge
+
 SECRET = SecuredData
 EXPIRED = 90d
 COOKIE_EXPIRED = 90
+
+EMAIL_USERNAME = ee99dee271a56f
+EMAIL_PASSWORD = d41cd75fd46fd8
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_PORT = 25  
+PASSWORD_RESET_EXPIRED = 10
+
