--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,12 +27,13 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
-    "hpp": "^0.2.3",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   }
