--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.26.0",
     "web-vitals": "^2.1.4",
     "zxcvbn": "^4.4.2"
   },
