--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   }
