--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,12 +32,15 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
+    "npm": "^10.4.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "zip-local": "^0.3.5"
   }
 }
