--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -17,7 +17,7 @@ POLYGON_APIKEY = 64360ddcc739c4e9b3bcb5ad0e3db603c61583c6
 POLYON_SECERT = 014808b7aeb316c7571649211101573988111e11
 POLGON_BASE_URL = https://polygon.codeforces.com/api
 
-CompilerApikey="c73e7c82d6msh8db4b2443993e17p12e1b4jsn41a0484d7ce1"
+CompilerApikeyK="c73e7c82d6msh8db4b2443993e17p12e1b4jsn41a0484d7ce1"
 CompilerApikeyM="b2042e80fbmsha1177a051f61b47p1d2fbfjsnca6af59b9b97"
 compilerApiUrlM= "http://localhost:2358/submissions/"
 compilerApiUrl= "https://judge0-ce.p.rapidapi.com/submissions"
