--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -20,4 +20,4 @@ POLGON_BASE_URL = https://polygon.codeforces.com/api
 CompilerApikeyK="c73e7c82d6msh8db4b2443993e17p12e1b4jsn41a0484d7ce1"
 CompilerApikeyM="b2042e80fbmsha1177a051f61b47p1d2fbfjsnca6af59b9b97"
 compilerApiUrlM= "http://localhost:2358/submissions/"
-compilerApiUrl= "https://judge0-ce.p.rapidapi.com/submissions"
+compilerApiUrlK= "https://judge0-ce.p.rapidapi.com/submissions"
