forgot and reset password was implemented using Send-Grid to user actual emails

--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -7,6 +7,7 @@ SECRET = SecuredData
 EXPIRED = 90d
 COOKIE_EXPIRED = 90
 
+# for Mailtrap.io Testing
 EMAIL_USERNAME = ee99dee271a56f
 EMAIL_PASSWORD = d41cd75fd46fd8
 EMAIL_HOST = sandbox.smtp.mailtrap.io
@@ -21,3 +22,8 @@ CompilerApikeyK="c73e7c82d6msh8db4b2443993e17p12e1b4jsn41a0484d7ce1"
 CompilerApikeyM="b2042e80fbmsha1177a051f61b47p1d2fbfjsnca6af59b9b97"
 compilerApiUrlM= "http://localhost:2358/submissions/"
 compilerApiUrlK= "https://judge0-ce.p.rapidapi.com/submissions"
+
+
+# for sendGrid sending Actual Emails
+SEND_GRID_USERNAME = apikey
+SEND_GRID_PASSWORD = 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
