--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,8 +36,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "npm": "^10.4.0",
+    "sharp": "^0.33.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4",
