--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "http-status-codes": "^2.3.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
