--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -20,8 +20,8 @@ POLGON_BASE_URL = https://polygon.codeforces.com/api
 
 CompilerApikeyK="c73e7c82d6msh8db4b2443993e17p12e1b4jsn41a0484d7ce1"
 CompilerApikeyM="b2042e80fbmsha1177a051f61b47p1d2fbfjsnca6af59b9b97"
-compilerApiUrlK= "http://localhost:2358/submissions/"
-compilerApiUrlM= "https://judge0-ce.p.rapidapi.com/submissions"
+compilerApiUrlM= "http://localhost:2358/submissions/"
+compilerApiUrlK= "https://judge0-ce.p.rapidapi.com/submissions"
 
 
 # for sendGrid sending Actual Emails
