--- a/Backend/package.json
+++ b/Backend/package.json
@@ -46,5 +46,8 @@
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4",
     "zip-local": "^0.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
