--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,53 +1,56 @@
 {
-  "name": "online-judge",
-  "version": "1.0.0",
-  "description": "Online judge project that applies ICPC rules",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js",
-    "serve": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sync-Arena/Graduation_Project.git"
-  },
-  "author": "Agmad Team",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sync-Arena/Graduation_Project/issues"
-  },
-  "homepage": "https://github.com/Sync-Arena/Graduation_Project#readme",
-  "dependencies": {
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "hpp": "^0.2.3",
-    "http-status-codes": "^2.3.0",
-    "i": "^0.3.7",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.13.22",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8",
-    "npm": "^10.4.0",
-    "sharp": "^0.33.2",
-    "uuid": "^9.0.1",
-    "validator": "^13.11.0",
-    "xss-clean": "^0.1.4",
-    "zip-local": "^0.3.5"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.5"
-  }
+    "name": "online-judge",
+    "version": "1.0.0",
+    "description": "Online judge project that applies ICPC rules",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "start": "nodemon server.js",
+        "dev": "nodemon server.js",
+        "serve": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Sync-Arena/Graduation_Project.git"
+    },
+    "author": "Agmad Team",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Sync-Arena/Graduation_Project/issues"
+    },
+    "homepage": "https://github.com/Sync-Arena/Graduation_Project#readme",
+    "dependencies": {
+        "axios": "^1.6.7",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
+        "dotenv": "^16.4.1",
+        "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "hpp": "^0.2.3",
+        "http-status-codes": "^2.3.0",
+        "i": "^0.3.7",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^5.13.22",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.8",
+        "npm": "^10.4.0",
+        "sharp": "^0.33.2",
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0",
+        "xss-clean": "^0.1.4",
+        "zip-local": "^0.3.5"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "prettier": "^3.2.5",
+        "supertest": "^7.0.0"
+    }
 }
