--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@uiw/react-codemirror": "^4.22.1",
     "axios": "^1.6.7",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap-icons": "^1.11.3",
     "codemirror": "^6.0.1",
     "date-fns": "^3.6.0",
     "flowbite": "^2.2.1",
