--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,6 +40,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-loading": "^2.0.3",
     "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
