--- a/Backend/configuration/config.env
+++ b/Backend/configuration/config.env
@@ -1,7 +1,7 @@
 PORT = 5000
 
-DATABASE_PASSWORD = tl7Vt8HYS8aI14Al
-DATABASE_HOST_LINK = mongodb+srv://Agmad-Team:tl7Vt8HYS8aI14Al@cluster0.hv1lrot.mongodb.net/OnlineJudge
+DATABASE_PASSWORD = zPWpWESoF0PA3T6U
+DATABASE_HOST_LINK = mongodb+srv://Agmad-Team:zPWpWESoF0PA3T6U@cluster0.hv1lrot.mongodb.net/OnlineJudge
 
 SECRET = SecuredData
 EXPIRED = 90d
